--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,8 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "__tests__/**/*.ts",
-    "__tests__/**/*.tsx"
+    "src/__tests__/**/*.ts",
+    "src/__tests__/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
