--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 .DS_Store
 node_modules
 /dist
-./coverage
 
 # local env files
 .env.local
@@ -21,3 +20,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+/coverage/
