--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "scripts": {
     "build": "tsc -p tsconfig-build.json",
+    "watch": "tsc-watch --noClear -p tsconfig-build.json",
     "test": "jest"
   },
   "license": "MIT",
@@ -20,6 +21,7 @@
     "rollup": "^2.53.1",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.1.0",
+    "tsc-watch": "^4.4.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
