--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig-build.json",
-    "watch": "tsc-watch --noClear -p tsconfig-build.json",
+    "dev": "rollup -c",
+    "build": "cross-env NODE_ENV=production rollup -c",
     "test": "jest"
   },
   "license": "MIT",
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.14.6",
+    "@rollup/plugin-typescript": "^8.2.3",
     "@types/jest": "^26.0.24",
+    "cross-env": "^7.0.3",
     "eslint": "^7.30.0",
     "eslint-plugin-import": "^2.23.4",
     "jest": "^27.0.6",
@@ -22,6 +24,7 @@
     "ts-jest": "^27.0.3",
     "ts-node": "^10.1.0",
     "tsc-watch": "^4.4.0",
+    "tslib": "^2.3.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
